<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="facebook_app_id">323952681287686</string>
    <string name="fb_login_protocol_scheme">fb323952681287686</string>
    <string name="google_client_id">145961843290-3mfli9g9qi5tmjfem79qme2chfe1oj83.apps.googleusercontent.com</string>

    <!--Common-->
    <string name="all_app_name" tools:ignore="MissingTranslation">Phượt Ngay</string>
    <string name="all_app_author" tools:ignore="MissingTranslation"> &#169; YosTa 2017 </string>
    <string name="all_app_version" tools:ignore="MissingTranslation">Version</string>


    <string name="all_your">Yours</string>
    <string name="all_friends">Friends</string>
    <string name="all_suggestions">Suggestions</string>
    <string name="all_your_trip">Your trips</string>
    <string name="all_noti">Notification</string>
    <string name="all_search">Search</string>
    <string name="all_invite">Invite</string>
    <string name="all_invited">Invited</string>
    <string name="all_filter">Filter</string>
    <string name="all_cancel">Hủy</string>
    <string name="all_save">Lưu</string>
    <string name="all_continue">Tiếp tục</string>
    <string name="all_confirm">Xác nhận</string>


    <!-- start profile-->
    <string name="profile"> Profile                             </string>
    <string name="profile_edit"> Edit                           </string>
    <string name="profile_name"> Name                           </string>
    <string name="profile_first_name"> First name               </string>
    <string name="profile_last_name"> Last name                 </string>
    <string name="profile_date_of_birth"> Date of Birth         </string>
    <string name="profile_membership"> Membership               </string>
    <string name="profile_email"> Email                         </string>
    <string name="profile_sign_up"> Sign Up                     </string>
    <string name="profile_logout"> Log out                      </string>
    <string name="profile_password"> Password                   </string>
    <string name="profile_account"> Account                     </string>
    <string name="profile_follow"> Follow                       </string>
    <string name="profile_followed"> Followed                   </string>
    <string name="profile_forgotPwd"> Forgot password?          </string>
    <string name="profile_login_google"> Google                 </string>
    <string name="profile_login_facebook"> Facebook             </string>
    <!-- end profile-->

    <!-- start setting-->
    <string name="setting"> Setting                             </string>
    <string name="setting_basic_settings"> Basic settings       </string>
    <string name="setting_backup_restore"> Backup &amp; Restore </string>

    <string name="setting_about"> About                         </string>
    <string name="setting_help"> Help Center                    </string>
    <string name="setting_terms"> Terms &amp; Policies          </string>
    <string name="setting_auto_sync"> Auto sync                 </string>
    <string name="setting_notification"> Notification           </string>
    <string name="setting_report_problem"> Report problems      </string>

    <string name="setting_language"> Language                   </string>
    <string name="setting_language_english"> English            </string>
    <string name="setting_language_vietnamese"> Vietnamese      </string>

    <string name="setting_3g"> 3G                               </string>
    <string name="setting_wifi"> Wifi                           </string>
    <!-- end setting-->

    <!-- start error message -->
    <string name="error_message_empty"> Không được để trống </string>
    <string name="error_st_wrongs"> Somethings went wrong </string>
    <string name="error_message_no_internet"> No internet connection </string>
    <string name="error_message_nothing_to_show"> Nothing to show! </string>
    <string name="error_message_unavailable">This feature isn\'t available.</string>
    <string name="error_message_map_search_query_null">Search string can\'t be null</string>
    <string name="error_message_email_existed"> Someone already has that email! </string>
    <string name="error_message_pass_not_match">These passwords do not match.</string>
    <string name="error_message_wrong_user_pass"> The email and password you entered do not match. </string>
    <!-- end error message -->

    <!-- start message -->
    <string name="message_later"> Later </string>
    <string name="message_new_comment"> Leave a new comment </string>
    <string name="message_snack_bar">
        <![CDATA[
            <font color=\"yellow\"> %s </font>
        ]]>
    </string>

    <!-- end message -->


    <string name="str_write_a_comment_while_offline">Write a comment while offline</string>


    <string name="str_notify_connected"> Connected </string>
    <string name="str_action_confirm_log_out"> Are you sure you want to log out? </string>
    <string name="str_action_confirm_password"> Confirm password </string>
    <string name="str_action_login_comeback"> Already a member? Login </string>
    <string name="str_action_choose_page"> Page number? </string>
    <string name="str_action_change_language_title"> Change your language </string>
    <string name="str_action_change_language_message"> Select an option. This app will exit to apply your choice. </string>
    <string name="str_action_turn_gps_on"> Please turn on GPS to get more events </string>
    <string name="str_action_search_hint"> Search your events </string>
    <string name="str_action_check_network"> Please check your network connection</string>
    <string name="str_free" tools:ignore="MissingTranslation"> Free </string>
    <string name="str_refresh" tools:ignore="MissingTranslation"> Refresh  </string>
    <string name="str_home">Home</string>
    <string name="str_login"> Login </string>
    <string name="str_submit"> Submit </string>
    <string name="str_info_categories"> Categories              </string>
    <string name="str_search"> Search                           </string>
    <string name="str_review"> Review </string>
    <string name="str_invite"> Invite </string>
    <string name="str_host_by"> Host by </string>
    <string name="str_exit"> Exit now </string>
    <string name="str_use_location"> Use location  </string>
    <string name="str_location"> Location </string>
    <string name="str_remove_location"> Remove your location </string>
    <string name="str_gps_on"> GPS is on </string>
    <string name="str_gps_off"> GPS is off </string>
    <string name="str_access_sync">Access every where</string>
    <string name="message_will_appear_when_online"> Will appear when online </string>
    <string name="message_login"><i>Stay connected to see all events your friends are attending.</i></string>
    <string name="message_connecting_to_server"> Connecting to server </string>
    <string name="message_please_connect_internet"> Connect internet to update events. </string>
    <string name="message_search_info"> Please turn on Location Services to search for events near you &#8230; <i><b> Click to enable >> </b></i> </string>
    <string name="str_filter">Filter</string>
    <string name="str_max_distance">Distance(km):</string>
    <string name="str_update">Update</string>
    <string name="scan">Scan</string>
    <string name="scan_code">Scan Code</string>
    <string name="str_by">by</string>
    <string name="photo_message" formatted="false">Item #%d was clicked!</string>
    <string name="message">Message</string>
    <string name="already_friends">Friends</string>
    <string name="add_as_friend">Make friends</string>
    <string name="max_distance_hint">(in km)</string>
    <string name="apply_filter">APPLY FILTER</string>

    <!--Add Group Activity-->
    <string name="str_group">Group</string>
    <string name="str_groups">Groups</string>
    <string name="str_group_name">Tên nhóm</string>
    <string name="str_create_group">Tạo group</string>
    <string name="str_add_friends">Mời bạn bè</string>

</resources>