<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.yostajsc.view.OwnToolBar
        android:id="@id/own_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layoutBackground="@android:color/white"
        app:layoutTitle="@string/setting"
        app:layoutTitleColor="@color/colorTextColorPrimary"
        app:layoutType="title_left" />

    <include layout="@layout/layout_shadow" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_profile"
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_vector_profile_blue" />

                <TextView
                    style="@style/CoreAppTheme.TextView_Sub_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:text="@string/str_profile" />

            </LinearLayout>

            <LinearLayout
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_vector_work" />

                <TextView
                    style="@style/CoreAppTheme.TextView_Sub_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:text="How it works" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_rating"
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_vector_rate" />

                <TextView
                    style="@style/CoreAppTheme.TextView_Sub_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:text="Rate Us" />

            </LinearLayout>

            <LinearLayout
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_vector_facebook" />

                <TextView
                    style="@style/CoreAppTheme.TextView_Sub_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:text="Share on Facebook" />

            </LinearLayout>

            <LinearLayout
                style="@style/Style_Menu_Item.Press"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_vector_language" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:baselineAligned="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CoreAppTheme.TextView_Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/setting_language" />

                    <TextView
                        android:id="@+id/txt_lang"
                        style="@style/CoreAppTheme.TextView_Sub_Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/str_action_change_language_title"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_notify"
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_vector_notification" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CoreAppTheme.TextView_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/setting_notification" />

                        <TextView
                            style="@style/CoreAppTheme.TextView_Sub_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/str_access_sync"
                            android:textStyle="italic" />

                    </LinearLayout>

                    <Switch
                        android:id="@+id/switch_notify"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_weight="3"
                        android:checked="true"
                        android:clickable="true"
                        android:enabled="true" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_about"
                style="@style/Style_Menu_Item.Press"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    style="@style/CoreAppTheme.IconClick"
                    android:layout_width="@dimen/icon_size_x3"
                    android:layout_height="@dimen/icon_size_x3"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_launcher" />

                <TextView
                    style="@style/CoreAppTheme.TextView_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_x2"
                    android:layout_marginStart="@dimen/margin_x2"
                    android:text="@string/setting_about" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>