<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yosta.phuotngay.ui.OwnToolBar
        android:id="@id/own_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutBackground="@color/colorPrimary" />

    <TextView
        style="@style/AppTheme.TextView_Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:maxLines="2"
        android:minLines="1"
        android:paddingTop="@dimen/margin"
        android:text="Create new group to go with you" />

    <TextView
        style="@style/AppTheme.TextView_Sub_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:maxLines="2"
        android:minLines="1"
        android:paddingBottom="@dimen/margin"
        android:text="Choose at least 1 friend to continue" />

    <include layout="@layout/layout_separate_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            style="@style/AppTheme.IconClick"
            android:layout_width="@dimen/icon_size_x12"
            android:layout_height="@dimen/icon_size_x12"
            android:layout_gravity="center"
            android:padding="@dimen/margin_x2"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin">

            <EditText
                android:id="@+id/text_group_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/str_group_name"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/layout_separate_vertical" />

    <TextView
        style="@style/AppTheme.TextView_Sub_Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:maxLines="2"
        android:minLines="1"
        android:padding="@dimen/margin_x2"
        android:text="Friends on Phượt Ngay social" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_recycler_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/AppTheme.TextView_Sub_Title.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:minLines="1"
                    android:padding="@dimen/margin"
                    android:text="Don't see who you're looking for?" />

                <Button
                    android:id="@+id/button_add_friend"
                    style="@style/AppTheme.TextView_Sub_Title.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:background="@drawable/ic_style_button_round_corners_theme"
                    android:text="@string/str_add_friends"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/button_confirm"
        style="@style/AppTheme.TextView_Title.Bold.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_style_button_round_none_accent_dark"
        android:text="@string/all_confirm" />

</LinearLayout>